navbar dropdown jumping fix

--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,10 @@ section.section {
 	padding-bottom:0;
 }
 
+.navbar .container{
+	overflow: visible;
+}
+
 .navbar .navbar-collapse {
 	margin-bottom: 0;
 	padding-bottom:0;
